# fractional

./: .gitignore  Dockerfile-backend  Dockerfile-frontend  docker-compose.yml  envs  pyproject.toml
backend/app/: main.py  models.py  test_main.http
backend/scripts/: get_desc.py  players-desc.json  players.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
